2008-02-09  Maurice van der Pot  <griffon26@kfk4ever.com>

	* libplanner/mrp-task-manager.c:
	(task_manager_calculate_task_finish),
	(task_manager_calculate_task_start_from_finish):
	Don't let fixed duration tasks run during non-working intervals on a working
	day (such as lunch time). This fixes the incorrect duration of fixed duration 
	tasks as reported in bug #486990 by Sebastien Roy <sebastien.roy@sun.com>.

	* libplanner/mrp-task.c: (task_class_init): 
	Fixed typo in property description.

	* src/planner-gantt-row.c: (gantt_row_notify_cb):
	Allow changes in scheduling mode to update the gantt bar appearance.

2008-02-02  Maurice van der Pot  <griffon26@kfk4ever.com>

	* libplanner/mrp-sql.c: (mrp_sql_load_project),
	(mrp_sql_save_project):
	* src/planner-sql-plugin.c: (sql_get_tested_connection):
	Now setting time zone to UTC in all connections to the database, otherwise
	the database will assume date fields are in local time and mess up the
	conversion to seconds since epoch. This caused a shift in project_start each
	time a project was read from the database.

2008-01-29  Kurt Maute  <kurt@maute.us>
	Patch to correct distcheck error, courtesy of Gilles Dartiguelongue
	(bug #464359)
	* data/mime/Makefile.am
	* data/Makefile.am
	* data/stylesheets/Makefile.am
	* Makefile.am

	Patch to resolve bug #312029
	* data/glade/resource-input-dialog.glade


2008-01-23  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/stylesheets/msp2planner.xsl: Now using OutlineNumber instead of WBS
	when importing MS project XML, fixing bug #373008.

2008-01-13  Maurice van der Pot  <griffon26@kfk4ever.com>

	* data/stylesheets/html1_tasks.xsl: fix calculation of task costs in
	exported HTML for tasks worked on by multiple people (bug #499090).

2007-12-09  Maurice van der Pot  <griffon26@kfk4ever.com>

	* configure.in: don't fail on make install if update-mime-database or
	update-desktop-database weren't found.