@@ -1,3 +1,10 @@
+2008-02-11  Maurice van der Pot  <griffon26@kfk4ever.com>
+
+	* src/planner-sidebar.c: (planner_sidebar_append):
+	Created a LABEL_FOR relation for buttons in the sidebar to improve
+	accessibility as suggested in bug #337382 by Rich Burridge
+	<rich.burridge@sun.com>.
+
 2008-02-09  Maurice van der Pot  <griffon26@kfk4ever.com>
 
 	* libplanner/mrp-task-manager.c:
